# pki-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yaml
.github/workflows/: test.yaml
src/: error.rs  lib.rs
src/certificate/: extension.rs  mod.rs  validate.rs  verify.rs
src/signature/: ecdsa.rs  ed25519.rs  mod.rs
tests/: validation.rs
tests/examples/: chain-invalid.crt
