[package]
name = "pki-rs"
description = "A (simple) X.509 certificate and trust chain validation library"
keywords = ["x509", "certificate", "pki", "validation", "verification"]
authors = ["Markus Wiegand <mail@morphy.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/morphy2k/pki-rs"
version = "0.1.0-alpha.2"
edition = "2021"
rust-version = "1.70"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ed25519", "ecdsa"]

# Signature algorithms
ed25519 = ["ed25519-dalek", "signature"]
ecdsa = ["dep:ecdsa", "p256", "p384", "signature"]
signature = ["dep:signature", "ed25519-dalek?/signature"]

fingerprint = ["spki/fingerprint", "spki/base64"]
pem = ["x509-cert/pem", "pkcs8/pem", "spki/pem"]
log = ["tracing/log"]

[dependencies]
x509-cert = { version = "0.2", features = ["std"], default-features = false }
spki = { version = "0.7", features = ["std"], default-features = false }
pkcs8 = { version = "0.10", features = ["std"], default-features = false }
const-oid = { version = "0.9", default-features = false }
signature = { version = ">=2.0, <2.3", features = ["std"], optional = true }
tracing = { version = "0.1", features = ["std"], default-features = false }

# Ed25519 signature
ed25519-dalek = { version = "2", features = [
    "std",
    "zeroize",
    "asm",
], default-features = false, optional = true }

# ECDSA signature
ecdsa = { version = "0.16", features = [
    "std",
    "pkcs8",
], default-features = false, optional = true }
p256 = { version = "0.13", features = [
    "std",
    "arithmetic",
    "ecdsa",
    "pkcs8",
], default-features = false, optional = true }
p384 = { version = "0.13", features = [
    "std",
    "arithmetic",
    "ecdsa",
    "pkcs8",
], default-features = false, optional = true }

[dev-dependencies]
pki-rs = { path = ".", features = ["pem"] }
rustls-pemfile = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
